--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # All bird sounds
 *.mp3
 
+.idea
+
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
